# WireWhale

./: CMakeLists.txt
res/: res.qrc
src/: data_unit.cpp  main.cpp  main_window.cpp  multithread.cpp
src/forms/: main_window.ui
src/headers/: data_unit.h  delegate.h  format.h  main_window.h  multithread.h
